Fix navigation button alignment

--- a/sass/main.sass
+++ b/sass/main.sass
@@ -301,7 +301,7 @@ main
             transform: translateX(-120%)
             z-index: 100
     .hamburger
-        height: 3rem
+        height: 5rem
         width: 3rem
         border: none
         position: fixed
